--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,8 @@
-<form action="<%= posts_path %>" method="POST">
+<!--<form action="<%= posts_path %>" method="POST">-->
+<!--  <label>Post title:</label><br>-->
+<!--  <input type="text" id="post_title" name="post[title]"><br>-->
+  
+  <%= form_tag posts_path do %>
   <label>Post title:</label><br>
   <input type="text" id="post_title" name="post[title]"><br>
  
