--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -13,8 +13,8 @@
 <!--  <input type="submit" value="Submit Post">-->
 <!--</form>-->
 
-<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
-  <input type="submit" value="Submit Post">
-<% end %>
+<!--<%= hidden_field_tag :authenticity_token, form_authenticity_token %>-->
+<!--  <input type="submit" value="Submit Post">-->
+<!--<% end %>-->
  
 <!--<%= params.inspect %>-->
